# padelpy2

./: .buildinfo  MANIFEST.in  README.md  api.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  publish_to_pypi.yml  run_tests.yml
docs/source/: api.rst  conf.py  index.rst
examples/: example.ipynb
padelpy2/: __init__.py  calculator.py  config.py  descriptors.py  fingerprints.py  results.py  utils.py  version.py  wrapper.py
padelpy2/PaDEL-Descriptor/: Descriptors.xls  descriptors.csv  fingerprints.csv
tests/: conftest.py  test_all.py
