[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "padelpy2"
version = "0.1.0"
description = "A Python wrapper for PaDEL-Descriptor"
authors = [
    { name = "Travis Kessler", email = "travis@cognichem.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7,<3.12"
dependencies = [
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
rdkit = [
    "rdkit-pypi==2022.9.5",
    "numpy==1.26.4"
]

[project.urls]
repository = "https://github.com/Cognitive-Chemistry-Labs/padelpy2"
