[build-system]
requires = ["setuptools==76.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "padelpy2"
version = "0.1.0"
description = "A Python wrapper for PaDEL-Descriptor"
authors = [
    { name = "Travis Kessler", email = "travis@cognichem.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pandas"
]

[project.optional-dependencies]
rdkit = [
    "rdkit-pypi==2022.9.5",
    "numpy==1.26.4"
]

[project.urls]
repository = "https://github.com/Cognitive-Chemistry-Labs/padelpy2"
